<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvActivityDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_activity_details"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvActivityName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/tv_activity_name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvActivityLocation"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/tv_activity_location"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvActivityDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/tv_activity_date"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvActivityTime"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/tv_activity_time"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvVolunteerName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/tv_volunteer_name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back" />

    </LinearLayout>
</LinearLayout>
