<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAddActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_add_activity_form"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvActivityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_activity_name"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etActivityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvActivityLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_activity_location"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etActivityLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvActivityDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_activity_date"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etActivityDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvActivityTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_activity_time"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etActivityTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvVolunteerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_volunteer_name"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etVolunteerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_activity" />
    </LinearLayout>
</LinearLayout>